# aristeia1

controllers/joystick/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
controllers/joystick/catkin_ws/devel/include/nodes/: AccGyro.h  Encoder.h  Force.h  LegCommand.h  LegEncoders.h  LegPosition.h  PWM.h  Position.h  RobotAngles.h  RobotForces.h  RobotInertiaMeasurements.h  camera_get_info.h  camera_get_infoRequest.h  camera_get_infoResponse.h  camera_save_image.h  camera_save_imageRequest.h  camera_save_imageResponse.h  connector_get_presence.h  connector_get_presenceRequest.h  connector_get_presenceResponse.h  connector_lock.h  connector_lockRequest.h  connector_lockResponse.h  connector_set_presence.h  connector_set_presenceRequest.h  connector_set_presenceResponse.h  differential_wheels_enable_control.h  differential_wheels_enable_controlRequest.h  differential_wheels_enable_controlResponse.h  differential_wheels_get_speed.h  differential_wheels_get_speedRequest.h  differential_wheels_get_speedResponse.h  display_draw_line.h  display_draw_lineRequest.h  display_draw_lineResponse.h  display_draw_oval.h  display_draw_ovalRequest.h  display_draw_ovalResponse.h  display_draw_pixel.h  display_draw_pixelRequest.h  (+319 more)
controllers/joystick/catkin_ws/devel/lib/nodes/: FL_leg_control  catch_the_bird  complete_test  complete_test1  e-puck_line  keyboard_teleop  panoramic_view_recorder  robot_information_parser
controllers/joystick/catkin_ws/devel/lib/pkgconfig/: nodes.pc
controllers/joystick/catkin_ws/devel/lib/python2.7/dist-packages/nodes/msg/: _AccGyro.py  _Encoder.py  _Force.py  _LegCommand.py  _LegEncoders.py  _LegPosition.py  _PWM.py  _Position.py  _RobotAngles.py  _RobotForces.py  _RobotInertiaMeasurements.py  __init__.py
controllers/joystick/catkin_ws/devel/lib/python2.7/dist-packages/nodes/srv/: __init__.py  _camera_get_info.py  _camera_save_image.py  _connector_get_presence.py  _connector_lock.py  _connector_set_presence.py  _differential_wheels_enable_control.py  _differential_wheels_get_speed.py  _display_draw_line.py  _display_draw_oval.py  _display_draw_pixel.py  _display_draw_polygon.py  _display_draw_rectangle.py  _display_draw_text.py  _display_fill_oval.py  _display_fill_polygon.py  _display_fill_rectangle.py  _display_get_info.py  _display_image_copy.py  _display_image_delete.py  _display_image_load.py  _display_image_new.py  _display_image_paste.py  _display_image_save.py  _display_set_alpha.py  _display_set_color.py  _display_set_opacity.py  _emitter_get_buffer_size.py  _emitter_get_channel.py  _emitter_get_range.py  _emitter_send.py  _emitter_set_channel.py  _emitter_set_range.py  _field_get_bool.py  _field_get_color.py  _field_get_count.py  _field_get_float.py  _field_get_int32.py  _field_get_node.py  _field_get_rotation.py  (+77 more)
controllers/joystick/catkin_ws/devel/share/common-lisp/ros/nodes/msg/: AccGyro.lisp  Encoder.lisp  Force.lisp  LegCommand.lisp  LegEncoders.lisp  LegPosition.lisp  PWM.lisp  Position.lisp  RobotAngles.lisp  RobotForces.lisp  RobotInertiaMeasurements.lisp  _package.lisp  _package_AccGyro.lisp  _package_Encoder.lisp  _package_Force.lisp  _package_LegCommand.lisp  _package_LegEncoders.lisp  _package_LegPosition.lisp  _package_PWM.lisp  _package_Position.lisp  _package_RobotAngles.lisp  _package_RobotForces.lisp  _package_RobotInertiaMeasurements.lisp  nodes-msg.asd
controllers/joystick/catkin_ws/devel/share/common-lisp/ros/nodes/srv/: _package.lisp  _package_camera_get_info.lisp  _package_camera_save_image.lisp  _package_connector_get_presence.lisp  _package_connector_lock.lisp  _package_differential_wheels_enable_control.lisp  _package_differential_wheels_get_speed.lisp  _package_display_draw_line.lisp  _package_display_draw_oval.lisp  _package_display_draw_pixel.lisp  _package_display_draw_text.lisp  _package_display_fill_polygon.lisp  _package_display_fill_rectangle.lisp  _package_display_get_info.lisp  _package_display_image_copy.lisp  _package_display_image_delete.lisp  _package_display_image_load.lisp  _package_display_image_new.lisp  _package_display_image_paste.lisp  _package_display_image_save.lisp  _package_display_set_alpha.lisp  _package_display_set_color.lisp  _package_display_set_opacity.lisp  _package_emitter_get_buffer_size.lisp  _package_emitter_get_channel.lisp  _package_emitter_get_range.lisp  _package_emitter_send.lisp  _package_emitter_set_channel.lisp  _package_emitter_set_range.lisp  _package_field_get_count.lisp  _package_field_get_node.lisp  _package_field_get_string.lisp  _package_field_get_type.lisp  _package_field_get_type_name.lisp  _package_field_import_node.lisp  _package_field_set_color.lisp  _package_led_get.lisp  _package_led_set.lisp  _package_motor_get_max_position.lisp  _package_motor_set_acceleration.lisp  (+163 more)
controllers/joystick/catkin_ws/devel/share/nodes/cmake/: nodes-msg-extras.cmake  nodes-msg-paths.cmake  nodesConfig.cmake
controllers/joystick/catkin_ws/src/nodes/: CMakeLists.txt  CMakeLists.txt.user.8f0b6ba  Readme.md
controllers/joystick/catkin_ws/src/nodes/src/: FL_leg_control.cpp  FL_leg_control_back_up.cpp  FL_leg_interface.cpp  FL_motor_pid.cpp  catch_the_bird.cpp  complete_test.cpp  complete_test1.cpp  complete_test1_back_up.cpp  e-puck_line.cpp  keyboard_teleop.cpp  panoramic_view_recorder.cpp  robot_information_parser.cpp
controllers/joystick/catkin_ws/src/nodes/srv/: camera_get_info.srv  connector_get_presence.srv  field_get_vec2f.srv  field_set_color.srv  node_get_center_of_mass.srv  node_get_contact_point.srv  node_get_position.srv  node_get_velocity.srv  node_set_velocity.srv  robot_get_type.srv
